@@ -33,38 +33,43 @@
    on Cointegrating Rank in Partial Systems", Journal of
    Business and Economic Statistics 16/4, October 1998,
    pp. 388-399. These pertain to H3, restricted trend.
-   TODO: their use here still needs more checking.
+
+   See also Pesaran, Shin and Smith, "Structural analysis 
+   of vector error correction models with exogenous I(1) 
+   variables", Journal of Econometrics 97 (2000), pp.
+   293-343. It may be worth re-simulating this table
+   with some more entries.
 */
 
-const double harbo_data[21][6] = {
+const double harbo_data[21][3] = {
     /* p_2 = 1 */
-    /* 80%    90%    95%  97.5%   mean   var */
-    { 11.0,  13.2,  15.2,  17.4,  8.15,  14.6 }, /* N = 1 */
-    { 24.7,  27.8,  30.5,  33.3,  20.1,  33.7 }, /* N = 2 */
-    { 41.9,  45.9,  49.6,  52.4,  35.9,  57.6 }, /* N = 3 */
-    { 63.0,  67.9,  71.7,  75.2,  55.5,  87.6 }, /* N = 4 */
-    { 88.1,  93.5,  98.0,  102,   78.9,  123  }, /* N = 5 */
-    { 116,   123,   127,   132,   106,   161  }, /* N = 6 */
+    /* 90%    95%  97.5% */
+    { 13.2,  15.2,  17.4 }, /* N = 1 */
+    { 27.8,  30.5,  33.3 }, /* N = 2 */
+    { 45.9,  49.6,  52.4 }, /* N = 3 */
+    { 67.9,  71.7,  75.2 }, /* N = 4 */
+    { 93.5,  98.0,  102  }, /* N = 5 */
+    { 123,   127,   132  }, /* N = 6 */
     /* p_2 = 2 */
-    { 13.3,  15.7,  17.9,  20.2,  10.0,  18.4 }, /* N = 1 */ 
-    { 29.1,  32.5,  35.5,  38.5,  23.9,  42.0 }, /* N = 2 */
-    { 48.4,  52.6,  56.3,  59.3,  41.6,  69.6 }, /* N = 3 */
-    { 71.4,  76.2,  80.9,  84.5,  63.1,  104  }, /* N = 4 */
-    { 98.1,  104,   108,   113,   88.2,  142  }, /* N = 5 */
+    { 15.7,  17.9,  20.2 }, /* N = 1 */ 
+    { 32.5,  35.5,  38.5 }, /* N = 2 */
+    { 52.6,  56.3,  59.3 }, /* N = 3 */
+    { 76.2,  80.9,  84.5 }, /* N = 4 */
+    { 104,   108,   113  }, /* N = 5 */
     /* p_2 = 3 */
-    { 15.6,  18.2,  20.7,  23.1,  12.0,  22.5 }, /* and so on */
-    { 33.3,  36.9,  39.9,  43.1,  27.7,  48.7 },
-    { 54.6,  59.0,  62.9,  66.6,  47.2,  80.4 },
-    { 79.6,  85.1,  89.2,  93.2,  70.6,  118  },
+    { 18.2,  20.7,  23.1 }, /* and so on */
+    { 36.9,  39.9,  43.1 },
+    { 59.0,  62.9,  66.6 },
+    { 85.1,  89.2,  93.2 },
     /* p_2 = 4 */
-    { 17.7,  20.5,  22.9,  25.4,  13.8,  24.8 },
-    { 37.4,  41.3,  44.5,  47.5,  31.4,  54.6 },
-    { 60.9,  65.6,  69.7,  73.1,  53.0,  92.2 },
+    { 20.5,  22.9,  25.4 },
+    { 41.3,  44.5,  47.5 },
+    { 65.6,  69.7,  73.1 },
     /* p_2 = 5 */
-    { 19.9,  22.8,  25.3,  27.7,  15.7,  28.5 }, /* N = 1 */ 
-    { 41.8,  45.8,  49.3,  52.8,  35.3,  63.2 }, /* N = 2 */
+    { 22.8,  25.3,  27.7 }, /* N = 1 */ 
+    { 45.8,  49.3,  52.8 }, /* N = 2 */
     /* p_2 = 6 */
-    { 22.0,  25.0,  27.7,  30.3,  17.6,  31.6 }  /* N = 1 */ 
+    { 25.0,  27.7,  30.3 }  /* N = 1 */ 
 };
 
 static int harbo_critvals (int p2, int N, double *cv)
@@ -76,11 +81,9 @@ static int harbo_critvals (int p2, int N, double *cv)
     }
 
     if (k <= 20) {
-	const double *cv_row = harbo_data[k];
-
-	cv[0] = cv_row[1];
-	cv[1] = cv_row[2];
-	cv[2] = cv_row[3];
+	cv[0] = harbo_data[k][0];
+	cv[1] = harbo_data[k][1];
+	cv[2] = harbo_data[k][2];
 	return 0;
     }
 
